# mt

./: .gitignore  Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
src/mt/: constants.py
src/mt/datasets/: __init__.py  dataloader.py  dataset.py  filtering.py
src/mt/models/: __init__.py  luong.py  sutskever.py
src/mt/scripts/: seq2seq_create_dataset.py  seq2seq_metrics.py  seq2seq_tokenizer_train.py  seq2seq_train.py
src/mt/tokenizers/: __init__.py  sutskever.py
